CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
PROJECT(Chess)
SET(CMAKE_VERBOSE_MAKEFILE true)

IF(WIN32)
	SET(CMAKE_FILES_DIRECTORY ${CMAKE_SOURCE_DIR}/vs2013)
ELSE(WIN32)
	SET(CMAKE_FILES_DIRECTORY ${CMAKE_SOURCE_DIR}/ubuntu)
ENDIF(WIN32)

IF(MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4996")
ELSE(MSVC)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -D_REENTRANT")
ENDIF(MSVC)

IF(WIN32)
ADD_EXECUTABLE(Chess
	main.cpp
	ChessBoard.cpp
	ChessPieceBish.cpp
	ChessPieceKing.cpp
	ChessPiecePawn.cpp
	ChessPieceRook.cpp
)
ELSE(WIN32)
ADD_EXECUTABLE(Chess
	main.cpp
	ChessBoard.cpp
	ChessPieceBish.cpp
	ChessPieceKing.cpp
	ChessPiecePawn.cpp
	ChessPieceRook.cpp
)
ENDIF(WIN32)

SET_TARGET_PROPERTIES(Chess
	PROPERTIES
	ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
)
